syntax = "proto3";

option csharp_namespace = "RapidTime.Api";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service User {
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc GetUserDeleteDate (GetUserRequest) returns (DeleteDateResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty);
  rpc GetAllUsers (google.protobuf.Empty) returns (MultiUserResponse);
}

message UserBase{
  string firstName = 1;
  string lastName = 2;
  bool gdprDeleted = 3;
  string email = 5;
  string phoneNumber = 6;
}

message DeleteDateResponse {
  google.protobuf.Timestamp deleteDate = 1;
}

message GetUserRequest{
  string id = 1;
}

message UserResponse{
  UserBase response = 1;
}

message UpdateUserRequest{
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  bool gdprDeleted = 4;
  google.protobuf.Timestamp deleteDate = 5;
}

message CreateUserRequest{
  UserBase request = 1;
}

message DeleteUserRequest{
  string id = 1;
}

message MultiUserResponse {
  repeated UserBase response = 1; 
}